5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1575_2896.log
== TEST (2019-03-13 13:18:15) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(Rommel)

# Impressao de saidas
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Rommel)
NameError: name 'Rommel' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:19:06) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(Romme)

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Romme)
NameError: name 'Romme' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 13:33:11) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("rommel")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:33:14) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("rommel")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.15069
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
